--- a/requirements.txt
+++ b/requirements.txt
@@ -80,7 +80,7 @@ platformdirs==4.0.0
 pluggy==1.3.0
 prometheus-client==0.18.0
 prompt-toolkit==3.0.41
-protobuf
+protobuf>=3.9.2,<5.0
 psutil==5.9.6
 pure-eval==0.2.2
 pyarrow==14.0.1
