--- a/requirements.txt
+++ b/requirements.txt
@@ -119,8 +119,9 @@ sniffio==1.3.0
 soundfile==0.11.0
 soupsieve==2.5
 stack-data==0.6.3
-streamlit==1.29.0
+streamlit==1.15.0
 tenacity==8.2.3
+tensorboard==2.10.1
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
 tensorflow-estimator==2.10.0
